Pushing fix to make comic sans render on mobile

--- a/page.css
+++ b/page.css
@@ -79,6 +79,11 @@ a.menuitem:active {
     text-align: center;
 }
 
+@font-face {
+  font-family: 'Comic Sans MS';
+  src: url("comic-sans-ms/comici.ttf");
+}
+
 
 /* Not Used */
 
